# libvas

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CFLAGS.cmake  CMakeLists.txt  Doxyfile  Makefile  README.md  alloc.c  appveyor.yml  config.h.in  dup.c  info.c  libvas.pc  libvas.pc.in  mingw32-cross.cmake  mingw32-cross.sh  poll.c  swig.i  test  test_install  vas-alloc.h  vas-internal.h  vas-ringbuf.h  vas-types.h.in  vas.c  vas.h  vas.h.in
cmake/: AddIfFlagCompiles.cmake  TestFileOffsetBits.c  TestWindowsFSeek.c  gmxTestLargeFiles.cmake
linux/: vas.c
mach/: cow.c  perror_mach.c  poll.c  ringbuf.c  vas-mach.h  vas.c
posix/: fmap.c  getpagesize.c  ringbuf.c
process_vm/: README.md  vas.c
procfs/: self.c  vas-procfs.h  vas.c
procfs-as/: vas.c
procfs-mem/: vas.c
ptrace/: vas.c
t/: change.c  cow.c  ringbuf.c  self.c
test/: cow.c  error.c  info.c  onchild_fork.c  onchild_popen.c  onself.c  ringbuf.c  test.h
test/manual/: readlong.c  tibia-healer.c
win32/: .ycm_extra_conf.py  ringbuf.c  vas.c
xnu/: vas.c
